@@ -64,6 +64,8 @@ Internal changes
 
     * Simplified the `current` module. It should also now use less memory than before.
     * Provide a new GObject signal to notify on artwork change and artwork reset.
+    * Looking for covers isn't as filesystem expensive as before, but it
+      doesn't check for multiple possible cases in the cover name anymore.
 
 
 1.7a1 (2013-02-08)
